# phoenix-rtos-ports

./: build.sh
tflm/: CMakeLists.txt  build.sh
tflm/patches/: 01.patch  02.patch  03.patch  04.patch  05.patch  06.patch  07.patch  08.patch  09.patch  10.patch  11.patch  12.patch  13.patch  14.patch  15.patch  16.patch  17.patch  18.patch  19.patch
